@@ -74,6 +74,8 @@ ix86/MinGW (2004).
 
 \item \MyEMail{jasper@simulistics.com} {Jasper Taylor} for his ports to arm32/Linux and arm64/Linux (2021).
 
+\item \MyEMail{jasper@simulistics.com} {Jasper Taylor} for his ports to RISC-V 64 bits/Linux (2022).
+
 \end{itemize}
 
 Many thanks to Paulo Moura for his continuous help (in particular
