@@ -1,5 +1,7 @@
 Change in GNU Prolog version 1.5.1
 
+* port to RISC-V 64 bits/Linux - many thanks to
+  Jasper Taylor <jasper@simulistics.com>
 * fix issue #17: CTRL+C as first action under top-level causes a segmentation fault
 * fix issue #20: length(L, L) raises an error instead of crashing (related to pr #19)
 * fix asm problems on macos/M1 with large sources (mapper arm64_any.c)
